Shrunk Card Size Shrunk Card Size and added functionality for the start of the game. Design changes, hi-score, and end-of-card-handling next

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,25 @@
   text-align: center;
   background-color: grey;
 }
+
+.Image {
+  height: 120px;
+  width: auto;
+}
+
+.Button {
+  transition-duration: 0.2s;
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.Button:hover {
+  background-color: white;
+  color: #4caf50;
+}
